modified pom.xml for the integration of babelomics in the general structure